# intake-esgf

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  LICENSE  README.md  e3sm_variables.py  environment.yml  prototype.py  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  ci.yml  pypi.yml
ci/: environment-docs.yml  environment.yml
doc/: Makefile  beginner.md  cache.md  cheatsheet.md  conf.py  configure.md  datalake.md  dictkeys.md  ensembles.md  extremes.md  faq.md  globus.md  ilamb.md  index.rst  intake.md  logging.md  measures.md  modelgroups.md  operators.md  paths.md  quickstart.md  reproduce.md  requirements.txt  search_magic.md  stream.md  summary.md  time.md
doc/_static/: style.css
examples/: adding_cell_measures.py  bayesian_model_averaging.py  carbon_cycle_anomalies.py  cmip6-example.ipynb  find_ilamb_models.py
intake_esgf/: __init__.py  base.py  catalog.py  check.py  config.py  core.py  cv.py  database.py  exceptions.py  logging.py  operators.py  projects.py  util.py
intake_esgf/core/: __init__.py  globus.py  solr.py  stac.py
intake_esgf/tests/: conftest.py  test_base.py  test_basic.py  test_catalog.py  test_config.py  test_database.py  test_download.py  test_globus.py  test_init.py  test_logging.py  test_operators.py  test_projects.py  test_solr.py  test_stac.py
intake_esgf/tests/core/: test_globus.py  test_init.py  test_solr.py  test_stac.py
intake_esgf/tests/project/: test_DRCDP.py  test_WrPMIP.py  test_cmip3.py  test_cmip5.py  test_cmip6.py  test_cmip6plus.py  test_input4MIPs.py  test_obs4MIPs.py
