[project]
name = "intake-esgf"
description = "Programmatic access to the ESGF holdings"
readme = "README.md"
authors = [
    { name = "Nathan Collier", email = "nathaniel.collier@gmail.com" }
]
classifiers = ["Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"]
license = { file="LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "dask",
    "globus-sdk",
    "netcdf4",
    "pandas",
    "pyyaml",
    "requests",
    "tqdm",
    "xarray",
]
dynamic=["version"]

[dependency-groups]
dev = [
    "pytest-cov",
]

[project.optional-dependencies]
docs = [
    "distributed",
    "furo",
    "ipywidgets",
    "matplotlib",
    "myst-nb",
    "nc-time-axis",
    "numpydoc",
    "sphinx-autosummary-accessors",
    "sphinx-copybutton",
]
notebook = [
    "ipywidgets",
    "tqdm[notebook]",
]

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.0"
version_file = "intake_esgf/_version.py"
version_file_template = '__version__ = "{version}"'

[tool.pytest.ini_options]
console_output_style = "count"
addopts = "--cov=intake_esgf --cov-report=xml --verbose -m 'not globus_auth'"
markers = [
    "globus_auth: tests which require globus authentication",
]

[tool.coverage.run]
omit = ["*/intake_esgf/tests/*"]

[tool.ruff]
target-version = "py310"
ignore = [
    "E501", # let black worry about line length
]
select = [
    "F",  # Pyflakes
    "E",
    "W",  # Pycodestyle
    "I",  # isort
    "UP", # Pyupgrade
]

[tool.ruff.isort]
known-first-party = ["intake_esgf"]
