[metadata]
name = intake-esgf
author = Nathan Collier
author_email = nathaniel.collier@gmail.com
license = BSD-3-Clause
description = An intake and intake-esm inspired catalog for ESGF
long_description_content_type=text/markdown
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
install_requires =
    pandas
    xarray
    xarray-datatree
    globus-sdk
    requests
    tqdm
    esgf-pyclient

[tool:pytest]
python_files = test_*.py
testpaths = intake_esgf/tests
